added style sheet and it almost displays something now.  Something weird is wrong with quiz calling QC, it seems to call Quiz.draw instead of qc.draw

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>test</title>
+<link rel="stylesheet" href="a.css"/>
 <script src="test.js"></script>
 </head>
 <body onLoad="load()">
