adding scripts sources to html, moving multimedia types to multimedia.js

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,6 +2,8 @@
 <head>
 <title>test</title>
 <link rel="stylesheet" href="a.css"/>
+<script src="questions.js"></script>
+<script src="multimedia.js"></script>    
 <script src="test.js"></script>
 </head>
 <body onLoad="load()">
