updating html and css

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,8 +6,9 @@
 <script src="multimedia.js"></script>    
 <script src="test.js"></script>
 </head>
+<h1>LiquiZ</h1>
 <body onLoad="load()">
-Test external text.
+
 <div id="content">
 
 </div>
